assets/prophet.css
#prophet .ship-list {
  padding: 6px 15px;
}
#prophet .ship-item {
  height: 30px;
  line-height: 30px;
  width: 100%;
}
#prophet span {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}
#prophet .alert {
  margin: 0px 6px;
  height: 30px;
  line-height: 30px;
  padding: 0 6px;
  background: #464545;
}
#prophet .alert > span{
  height: 30px;
  line-height: 30px;
}
#prophet .fa {
  line-height: inherit;
}

#prophet .prophet-info-content {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  display: flex;
  flex-flow: row nowrap;
  justify-content: space-between;
  flex: 1;
}
#prophet .ship-name {
  flex: 1;
  overflow: hidden;
  text-overflow: ellipsis;
}
#prophet .attack-damage {
  flex: none;
  display: flex;
  align-items: center;
  margin-left: 10px;
}
#prophet .prophet-info-name {
  text-shadow: none;
}
#prophet .hp-progress{
  flex: 1;
  align-items: center;
  justify-content: space-between;
}
#prophet .hp-progress .hpBar{
  padding-top: 3px;
}
#prophet .hp-progress .progress {
  position: relative;
  margin: 0px 15px;
  background-color: inherit;
  height: 6px;
  flex: auto;
}
#prophet .hp-progress .progress-bar span {
  position: absolute;
  width: 100%;
  display: block;
}
#prophet .hp-text {
  flex: none;
  text-align: right;
}

#prophet .navigation-bar-airplane {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  flex: none;
  display: flex;
}
.navigation-bar-airplane > span span {
  display: inline-block;
}
#prophet .navigation-bar-hp {
  flex: 1;
}

